--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -20,6 +20,10 @@
         display: flex;
         flex-direction: column;
 
+        h3{
+            margin-bottom: 18px;
+        }
+
         .task-list{
             margin-top: 28px;
         }
