--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,39 +1,66 @@
-.task-container{
+.tasks-container {
     padding: 60px 85px;
     display: flex;
     flex-direction: column;
     max-width: 40%;
     padding-top: 50px;
     height: 100vh;
+    overflow-y: hidden;
+    flex: auto;
 
-    h2{
+    h2 {
         margin-bottom: 24px;
     }
 
-    h3{
+    h3 {
         font-size: 18px;
     }
 
-    .last-tasks{
+    .last-tasks {
         flex: 1;
         overflow-y: hidden;
         display: flex;
         flex-direction: column;
 
-        h3{
+        h3 {
             margin-bottom: 18px;
         }
 
-        .task-list{
+        /* width */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(
+                262.71deg,
+                #00d1ff -30.04%,
+                #00ffa3 124.74%
+            );
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+
+        .tasks-list {
+            overflow-y: auto;
             margin-top: 28px;
         }
     }
 
-    .completed-tasks{
+    .completed-tasks {
         flex: 1;
         padding-top: 28px;
 
-        .task-list{
+        .tasks-list {
             margin-top: 28px;
         }
     }
